--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@nostr-dev-kit/ndk": "^2.11.0",
+		"@nostr-dev-kit/ndk-cache-dexie": "^2.5.9",
+		"@nostr-dev-kit/ndk-svelte": "^2.4.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"all": "^0.0.0",
 		"mode-watcher": "^0.5.1"
